--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Basic styles */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Georgia, serif;
     margin: 0;
     padding: 0;
 }
@@ -16,9 +16,12 @@ header {
 
 .logo h1 {
     margin: 0;
+    position: static;
 }
 
 header nav ul {
+    position: relative;
+    left: 22px;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -26,11 +29,35 @@ header nav ul {
 
 header nav ul li {
     display: inline;
-    margin: 0 10px;
+    margin: 10px;
 }
 
 .products {
     padding: 20px;
+    text-align: center;
+}
+
+.top-product {
+    background-color: #999999;
+    color: #fff;
+    padding: 25px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+img {
+    background-color: white;
+    border: 5px solid #ccc;
+    padding: 10px;
+}
+
+
+.top-product-name {
+    position: relative;
+    text-align: center;
+    font-family: Georgia, serif;
+    font-size: 25px;   
 }
 
 .product-grid {
@@ -40,8 +67,14 @@ header nav ul li {
 }
 
 .product {
-    border: 1px solid #ccc;
+    border: 5px solid #ccc;
     padding: 10px;
+    text-align: center;
+
+}
+
+.product-description {
+    text-align: center;
 }
 
 .product img {
